creation of navBar and the featuredSection

--- a/index.html
+++ b/index.html
@@ -7,8 +7,27 @@
     <title>Restaurant</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
+<body >
+    <section class="navBar">
+        <a href="index.html">TACOS</a>
+        <a href="index.html">BEERS</a>
+        <a href="index.html">WINES</a>
+        <a href="index.html">DESSERTS</a>
+        <a href="index.html">RESERVATIONS</a>
+    </section>
     
+    <section class="featuredSection">
+        <div class="image">
+        </div>
+        <div class="priceBox">
+            <span class="price">$1.99</span>
+            <span class="product">Tacos</span>
+        </div>
+        <div class="priceBox">
+            <span class="price">$3.99</span>
+            <span class="product">Kombucha</span>
+        </div>
+    </section>
+
 </body>
 </html>
