creation of resources section

--- a/index.html
+++ b/index.html
@@ -29,5 +29,38 @@
         </div>
     </section>
 
+    <section class="resources">
+        <div class="resource">
+            <img src="./assets/taquito.png" alt="Taquito image">
+            <span>Tacos</span>
+            <p>Lorem ipsum dolor sit amet consectur adispising elit. Animi assumenda.</p>
+        </div>
+        <div class="resource">
+            <img src="./assets/cerveja.png" alt="Beer image">
+            <span>Beer</span>
+            <p>Lorem ipsum dolor sit amet consectur adispising elit. Animi assumenda.</p>
+        </div>
+        <div class="resource">
+            <img src="./assets/copo-de-vinho.png" alt="Wine image">
+            <span>Wine</span>
+            <p>Lorem ipsum dolor sit amet consectur adispising elit. Animi assumenda.</p>
+        </div>
+        <div class="resource">
+            <img src="./assets/musica.png" alt="Music image">
+            <span>Music</span>
+            <p>Lorem ipsum dolor sit amet consectur adispising elit. Animi assumenda.</p>
+        </div>
+        <div class="featuredResource">
+            <div class="resourceImage">
+            <img src="./assets/queso-taco.png" alt="Queso-Taco image">
+            </div>
+            <div class="featuredResourceText">
+                <h2>Featured Taco</h2>
+                <h4><p>Slim profile, easy to hold and loaded with cheese!</p></h4>
+                <h4><p>This is the one you've been waiting for.</p></h4>
+                <a href="index.html">Learn more -></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
