cration of instant gram section

--- a/index.html
+++ b/index.html
@@ -62,5 +62,31 @@
             </div>
         </div>
     </section>
+
+    <div class="title">
+        <div class="bar1"></div>
+        <h3>Instant Grams</h3>
+        <div class="bar2"></div>
+    </div>
+
+    <section class="instantGram">
+        <div class="gramImage img1">
+        </div>
+        <div class="gramImage img2">
+        </div>
+        <div class="gramImage img3">
+        </div>
+        <div class="gramImage img4">
+        </div>
+        <div class="gramImage img5">
+        </div>
+        <div class="gramImage img6">
+        </div>
+        <div class="gramImage img7">
+        </div>
+        <div class="gramImage img8">
+        </div>
+    </section>
+
 </body>
 </html>
